--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -521,7 +521,7 @@
 
     <section class="section dashboard">
       <div class="row">
-
+        <!-- lalalalalala -->
         <!-- Left side columns -->
         <div class="col-lg-8">
           <div class="row">
@@ -631,7 +631,7 @@
                 </div>
               </div>
 
-            </div><!-- End Customers Card -->
+            </div>End Customers Card
 
             <!-- Reports -->
             <div class="col-12">
@@ -885,7 +885,7 @@
             </div>
 
             <div class="card-body">
-              <h5 class="card-title">Recent Activity <span>| Today</span></h5>
+              <h5 class="card-title">Recent Activity Biji<span>| Today</span></h5>
 
               <div class="activity">
 
